--- a/Financier.Web.FinancialStatements/src/DetailedGraph.scss
+++ b/Financier.Web.FinancialStatements/src/DetailedGraph.scss
@@ -6,409 +6,22 @@
   font-size: 16px;
 }
 
-body {
-  font-family: "Roboto";
-}
+.DetailedGraph {
+  .chart {
+    .amount {
+      display: block;
 
-.large {
-  font-size: 2em;
-}
-
-.reset {
-  font-size: 1rem;
-}
-
-.main-header {
-  padding: 3rem 3rem;
-  font-family: "Roboto";
-  font-size: 4.5em;
-  text-align: center;
-}
-
-.errors {
-  .error {
-    background-color: red;
-    color: white;
-    font-size: 1em;
-    height: 1.25em;
-    width: 32em;;
-  }
-}
-
-// .account-navigation {
-//   display: flex;
-//   flex-flow: wrap;
-//   flex-direction: column;
-//   row-gap: 4em;
-//
-//   .buttons {
-//     display: flex;
-//     flex-flow: wrap;
-//     flex-direction: row;
-//     column-gap: 2em;
-//
-//     justify-content: start;
-//   }
-//
-//   .content {
-//     display: flex;
-//     flex-flow: wrap;
-//     flex-direction: column;
-//     row-gap: 1em;
-//   }
-// }
-
-.button {
-  padding: 0.75em 0.375em;
-  border: solid;
-  border-width: 0.1em;
-  width: 14em;
-  text-align: center;
-
-  border-color: blue;
-  color: blue;
-  cursor: pointer;
-
-  &.enabled {
-    border-color: blue;
-    color: blue;
-    cursor: pointer;
-  }
-
-  &.disabled {
-    border-color: grey;
-    color: grey;
-    cursor: not-allowed;
-  }
-}
-
-.time-navigation {
-  display: flex;
-  flex-flow: wrap;
-  flex-direction: column;
-  row-gap: 1.5em;
-
-  .yearly-navigation {
-    display: flex;
-    flex-flow: wrap;
-    flex-direction: row;
-    row-gap: 0.5em;
-    column-gap: 0.5em;
-  }
-}
-
-.welcome {
-  .date-range {
-    display: flex;
-    flex-flow: wrap;
-    flex-direction: column;
-
-    .date-picker {
-      display: flex;
-      flex-direction: column;
-
-      .container {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-
-        .name {
-          margin: auto 0;
-        }
+      &.hidden {
+        display: none;
       }
     }
-  }
 
-  .submission {
-    padding-top: 6.25em;
-
-    a {
-      font-size: 1em;
-      width: 12.5em;
-      height: 1.25em;
-
-      color: blue;
-      text-decoration-line: initial;
-    }
-  }
-}
-
-.navigation {
-  display: flex;
-  flex-flow: wrap;
-  flex-direction: row;
-  column-gap: 30px;
-
-  .button {
-    padding: 0.75em 0.375em;
-    border: solid;
-    border-width: 1.5px;
-    width: 14em;
-    text-align: center;
-
-    &.enabled {
-      border-color: blue;
-      color: blue;
-      cursor: pointer;
-    }
-
-    &.disabled {
-      border-color: grey;
-      color: grey;
-      cursor: not-allowed;
-    }
-  }
-}
-
-.monthly-cashflow {
-  display: flex;
-  flex-flow: wrap;
-  flex-direction: row;
-
-  .graph {
-    width: 100%;
-
-    .chart {
-      .label {
-        font-size: 6px;
-      }
-
-      .tick {
-        font-size: 6px;
-      }
-
-      .x-axis {
-        text {
-          // display: none;
-          text-anchor: middle;
-        }
-      }
-
-      path {
-        display: block;
-
-        &.hidden {
-          display: block;
-          stroke: rgba(125, 125, 125, 0.2);
-          stroke-dasharray: 4;
-        }
-      }
+    .tick {
+      font-size: 6px;
 
       text {
-        &.hidden {
-          opacity: 20%;
-        }
-      }
-
-      .y-axis {
-        .label {
-          text-anchor: end;
-        }
+        text-anchor: end;
       }
     }
   }
-}
-
-.detailed-cashflow {
-  display: flex;
-  flex-flow: wrap;
-  flex-direction: row;
-
-  .criteria {
-    width: 20%;
-
-    .checkbox {
-      input, label {
-        cursor: pointer;
-      }
-
-      &:first-of-type {
-        padding-top: 10px;
-      }
-    }
-  }
-
-  .graph {
-    width: 80%;
-
-    .chart {
-      .amount {
-        display: block;
-
-        &.hidden {
-          display: none;
-        }
-      }
-
-      .tick {
-        font-size: 6px;
-
-        text {
-          text-anchor: end;
-        }
-      }
-    }
-  }
-}
-
-@mixin values($first-child-width, $width, $last-child-width) {
-  .header {
-    div {
-      font-size: 20px;
-      width: $width;
-      padding-left: 10px;
-      padding-right: 10px;
-    }
-
-    div:first-child {
-      width: $first-child-width;
-
-      padding-left: 0px;
-      padding-right: 10px;
-      border-right-color: black;
-      border-right-style: solid;
-      border-right-width: 1px;
-    }
-
-    div:last-child {
-      width: $last-child-width;
-      padding-right: 0px;
-    }
-
-    div.number {
-      text-align: right;
-    }
-
-    display: flex;
-
-    text-align: left;
-
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
-    border-bottom-color: black;
-  }
-
-  .items {
-    .item {
-      color: black;
-      cursor: default;
-
-      &.clickable {
-        cursor: pointer;
-      }
-
-      &.not-clickable {
-        cursor: not-allowed;
-      }
-    }
-
-    .item:hover {
-      color: white;
-      background-color: darkgrey;
-    }
-
-
-    .item {
-      div, input {
-        padding: 2px 10px 2px 10px;
-        width: $width;
-        font-family: monospace;
-      }
-
-      :first-child {
-        width: $first-child-width;
-
-        padding: 2px 10px 2px 0px;
-        border-right-color: black;
-        border-right-style: solid;
-        border-right-width: 1px;
-      }
-
-      :last-child {
-        padding-right: 0px;
-        width: $last-child-width;
-      }
-
-      .number {
-        text-align: right;
-      }
-
-      input.tags {
-        border: none;
-        color: white;
-        background-color: grey;
-      }
-
-      .tags {
-        &.non-interactive {
-          cursor: pointer;
-        }
-
-        &.interactive {
-          font-family: monospace;
-        }
-
-        &.displayed {
-          display: block;
-        }
-
-        &.none {
-          display: none;
-        }
-      }
-
-      display: flex;
-      flex-direction: row;
-      text-align: left;
-
-      border-bottom-width: 1px;
-      border-bottom-style: solid;
-      border-bottom-color: blue;
-    }
-  }
-
-  .total {
-    &:hover {
-      color: white;
-      background-color: darkgrey;
-    }
-
-    div {
-      padding: 7px 10px 2px 10px;
-      width: $width;
-      font-family: monospace;
-    }
-
-    div:first-child {
-      width: $first-child-width;
-
-      padding: 7px 10px 2px 0px;
-      border-right-color: black;
-      border-right-style: solid;
-      border-right-width: 1px;
-    }
-
-    div.number {
-      text-align: right;
-    }
-
-    div:last-child {
-      padding-right: 0px;
-      width: $last-child-width;
-    }
-
-    display: flex;
-    flex-direction: row;
-    font-size: 20px;
-    text-align: left;
-  }
-}
-
-// TODO: Move into a mixin!
-.values {
-  @include values(40%, 20%, 20%);
-}
-
-.itemized-values {
-  @include values(8%, 18.4%, 18.4%);
 }
