--- a/Financier.Web.FinancialStatements/src/mixins/value.scss
+++ b/Financier.Web.FinancialStatements/src/mixins/value.scss
@@ -1,5 +1,6 @@
 @mixin value($first-child-width, $width, $last-child-width) {
   .item {
+    font-family: monospace;
     color: black;
     cursor: default;
 
@@ -10,25 +11,29 @@
     &.not-clickable {
       cursor: not-allowed;
     }
-  }
 
-  .item:hover {
-    color: white;
-    background-color: darkgrey;
-  }
-
-
-  .item {
-    div, input {
-      padding: 2px 10px 2px 10px;
+    > div, > input {
       width: $width;
-      font-family: monospace;
+      padding: 4px 4px;
+      border-style: none;
+
+      &.interactive {
+        font-weight: 1000;
+        // font-size: 1.5em;
+        color: white;
+        background-color: darkgrey;
+        padding: 2px 2px;
+
+        border-style: solid;
+        border-width: 2px;
+        border-color: black;
+      }
     }
 
     :first-child {
       width: $first-child-width;
 
-      padding: 2px 10px 2px 0px;
+      padding: 2px 2px;
       border-right-color: black;
       border-right-style: solid;
       border-right-width: 1px;
@@ -43,28 +48,16 @@
       text-align: right;
     }
 
-    input.tags {
-      border: none;
+    &:hover {
+      font-weight: 1000;
       color: white;
-      background-color: grey;
+      background-color: darkgrey;
     }
 
-    .tags {
-      &.non-interactive {
-        cursor: pointer;
-      }
+    input.tags {
+      margin: 0;
+      font-family: monospace;
 
-      &.interactive {
-        font-family: monospace;
-      }
-
-      &.displayed {
-        display: block;
-      }
-
-      &.none {
-        display: none;
-      }
     }
 
     display: flex;
