--- a/Financier.Web.FinancialStatements/src/mixins/values.scss
+++ b/Financier.Web.FinancialStatements/src/mixins/values.scss
@@ -1,17 +1,15 @@
 @mixin values($first-child-width, $width, $last-child-width) {
   .header {
     div {
-      font-size: 20px;
+      font-size: 1.25em;
       width: $width;
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-left: 2px;
+      padding-right: 2px;
     }
 
     div:first-child {
       width: $first-child-width;
 
-      padding-left: 0px;
-      padding-right: 10px;
       border-right-color: black;
       border-right-style: solid;
       border-right-width: 1px;
@@ -46,7 +44,7 @@
     }
 
     div {
-      padding: 7px 10px 2px 10px;
+      padding: 7px 2px;
       width: $width;
       font-family: monospace;
     }
@@ -54,7 +52,7 @@
     div:first-child {
       width: $first-child-width;
 
-      padding: 7px 10px 2px 0px;
+      padding: 7px 2px;
       border-right-color: black;
       border-right-style: solid;
       border-right-width: 1px;
@@ -71,7 +69,7 @@
 
     display: flex;
     flex-direction: row;
-    font-size: 20px;
+    font-size: 1.25em;
     text-align: left;
   }
 }
